# neopresence

./: Cargo.toml  README.md  log  shell.nix
.direnv/: flake-profile-1-link
src/: diff.rs  discord.rs  lib.rs  logger.rs  main.rs  messages.rs  nvim.rs  stdio.rs  types.rs
