[package]
name = "neopresence"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.3.0"
log = "0.4"
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
serde_repr = "0.1"
lsp-types = "0.95.1"
discord-presence = "1.3.1"
anyhow             = "1.0"
ctrlc              = "3.4"
tracing-subscriber = "0.3"
version-sync       = "0.9"
tracing = "0.1.40"
tokio = { version = "1", features = ["full"] }
